[package]
name = "enumkit"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/veggiebob/enumkit"
homepage = "https://github.com/veggiebob/enumkit"
description = "Extra tools for working with enums in Rust."
readme = "README.md"
keywords = ["macro", "enum"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn="2.0"
quote="1.0"
serde = { version = "1.0", features = ["derive"] }