[package]
name = "enumkit"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/veggiebob/enumkit"
homepage = "https://github.com/veggiebob/enumkit"
description = "Convenient traits for working with enums."
readme = "README.md"
keywords = ["enum", "extension", "enumkit"]
categories = ["rust-patterns"]

[dependencies]
enumkit-derive = { path = "../enumkit-derive" }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "enumkit-derive/serde"]
